Refactored to a Feature module rather than a Foundation one

--- a/src/Foundation/SecurityHeaders/code/App_Config/Include/Feature/SXA.Feature.SecurityHeaders.Serialization.config
+++ b/src/Foundation/SecurityHeaders/code/App_Config/Include/Feature/SXA.Feature.SecurityHeaders.Serialization.config
@@ -3,7 +3,7 @@
         <unicorn>
             <configurations>
                 <configuration
-                    name="Foundation.SecurityHeaders"
+                    name="Feature.SecurityHeaders"
                     description="SXA SecurityHeaders definition items"
                     patch:after="configuration[@name='Foundation.Serialization']">
 
@@ -12,7 +12,7 @@
                     <syncConfiguration type="Unicorn.Loader.DefaultSyncConfiguration, Unicorn" singleInstance="true" updateLinkDatabase="false" updateSearchIndex="true" maxConcurrency="1" />
 
                     <predicate>
-                        <include name="Settings" path="/sitecore/system/Settings/Foundation/SecurityHeader" database="master" />
+                        <include name="Settings" path="/sitecore/system/Settings/Feature/SecurityHeader" database="master" />
                         <include name="Templates" database="master" path="/sitecore/templates/$(layer)/$(module)" />
                         <include name="PowerShell" database="master" path="/sitecore/system/Modules/PowerShell/Script Library/SXA Security Headers" />
                         <include name="Insert Options" database="master" path="/sitecore/system/Settings/Rules/Insert Options/Rules/Security Headers" />
