--- a/src/Foundation/SecurityHeaders/code/SXA.Feature.SecurityHeaders.csproj
+++ b/src/Foundation/SecurityHeaders/code/SXA.Feature.SecurityHeaders.csproj
@@ -13,8 +13,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SXA.Foundation.SecurityHeaders</RootNamespace>
-    <AssemblyName>SXA.Foundation.SecurityHeaders</AssemblyName>
+    <RootNamespace>SXA.Feature.SecurityHeaders</RootNamespace>
+    <AssemblyName>SXA.Feature.SecurityHeaders</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -119,8 +119,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Config\Include\Foundation\SXA.Foundation.SecurityHeaders.config" />
-    <Content Include="App_Config\Include\Foundation\SXA.Foundation.SecurityHeaders.Serialization.config" />
+    <Content Include="App_Config\Include\Feature\SXA.Feature.SecurityHeaders.config" />
+    <Content Include="App_Config\Include\Feature\SXA.Feature.SecurityHeaders.Serialization.config" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="web.config" />
     <None Include="web.Debug.config">
@@ -149,9 +149,7 @@
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
