--- a/src/Foundation/SecurityHeaders/code/packages.config
+++ b/src/Foundation/SecurityHeaders/code/packages.config
@@ -8,7 +8,14 @@
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
-  <package id="Sitecore.Kernel.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Kernel" version="9.1.1" targetFramework="net472" />
+  <package id="Sitecore.XA.Foundation.IoC" version="4.8.1" targetFramework="net472" developmentDependency="true" />
+  <package id="Sitecore.XA.Foundation.MarkupDecorator" version="4.8.1" targetFramework="net472" developmentDependency="true" />
+  <package id="Sitecore.XA.Foundation.Multisite" version="4.8.1" targetFramework="net472" developmentDependency="true" />
+  <package id="Sitecore.XA.Foundation.Mvc" version="4.8.1" targetFramework="net472" developmentDependency="true" />
+  <package id="Sitecore.XA.Foundation.RenderingVariants" version="4.8.1" targetFramework="net472" developmentDependency="true" />
+  <package id="Sitecore.XA.Foundation.SitecoreExtensions" version="4.8.1" targetFramework="net472" developmentDependency="true" />
+  <package id="Sitecore.XA.Foundation.Variants.Abstractions" version="4.8.1" targetFramework="net472" developmentDependency="true" />
   <package id="System.ComponentModel" version="4.0.1" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net461" />
   <package id="System.Globalization" version="4.0.11" targetFramework="net461" />
